2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* TODO: Updated TODO list with things
	we did not get done before 1.12 release.

2000-07-30  Mo DeJong  <mdejong@redhat.com>

	* src/option.cpp (ArgumentExpanded): Fix core dump
	when processing a @file argument that contains
	the sequence "\n\n".

2000-07-27  Mo DeJong  <mdejong@redhat.com>
 
	* src/system.cpp (GetOutputDirectory): Check for
	a NULL semantic member of a FileSymbol when writing
	dependencies. A .class file can have a NULL
	semantic member which was causing a core dump.

2000-07-26  C. Brian Jones  <cbj@gnu.org>
 
	* src/option.cpp (Option): Create a
	copy of the -classpath string so it
	can be deleted correctly later.

2000-07-26  Mo DeJong  <mdejong@redhat.com>

	* src/unparse.cpp: Uncomment #includes,
	they need to be moved to platform.h but
	without them the compile would fail if
	-DJIKES_DEBUG was set.

2000-07-25  Mo DeJong  <mdejong@redhat.com>

	* src/configure:
	* src/configure.in: Remove files from
	the old build system. These files
	were removed before but somehow they
	showed up in the CVS again.

2000-07-25  Chris Abbey <cabbey@bresnanlink.net>

	* configure.in: Disable check for namespace support.
	* src/access.h:
	* src/ast.cpp:
	* src/ast.h:
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/case.cpp:
	* src/case.h:
	* src/class.h:
	* src/code.cpp:
	* src/code.h:
	* src/control.cpp:
	* src/control.h:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/depend.h:
	* src/diagnose.cpp:
	* src/diagnose.h:
	* src/double.cpp:
	* src/double.h:
	* src/dump.cpp:
	* src/error.cpp:
	* src/error.h:
	* src/expr.cpp:
	* src/getclass.cpp:
	* src/getclass.h:
	* src/incrmnt.cpp:
	* src/init.cpp:
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h:
	* src/jikes.cpp:
	* src/jikesapi.cpp:
	* src/long.cpp:
	* src/long.h:
	* src/lookup.cpp:
	* src/lookup.h:
	* src/lpginput.cpp:
	* src/lpginput.h:
	* src/modifier.cpp: