@@ -1,5 +1,12 @@
 2000-07-30  Mo DeJong  <mdejong@redhat.com>
 
+	* src/decl.cpp (CompleteSymbolTable, AddInheritedMethods): Revert
+	change meant to fix bug 102. The fix for 102 causes crashes in
+	CheckInheritedMethodThrows. We will need to re-address this
+	problem after the 1.12 release.
+
+2000-07-30  Mo DeJong  <mdejong@redhat.com>
+
 	* TODO: Updated TODO list with things
 	we did not get done before 1.12 release.
 
